examples/errors/error_undefined_method.cay
// Error测试：未定义方法
public class TestUndefinedMethod {
    public static void main() {
        undefinedFunction();
    }
}
